Fixing button styling and header whitespace.

--- a/src/styles.css
+++ b/src/styles.css
@@ -62,6 +62,9 @@ button:hover,
 	background: #333333;
     border-color: #333333;
 }
+.content-container button{
+	margin-bottom: 10px;
+}
 .mat-icon,
 .mat-icon-button{
 	color: #028b08;
